Add route for checking duplicates on the database
